--- a/KMeans++.ipynb
+++ b/KMeans++.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +55,7 @@
     "    def __init__(self, n_clusters=3, max_iter=100):\n",
     "        self.n_clusters = n_clusters\n",
     "        self.max_iter = max_iter\n",
+    "        self.centroids = None\n",
     "        self.labels = None\n",
     "\n",
     "    def _euclidean_distance(self, a, b):\n",
